--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.0",
+    "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.12.2",
     "nanoid": "^5.1.6",
     "react": "^19.1.1",
@@ -19,7 +20,10 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
-    "react-toastify": "^11.0.5"
+    "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
